--- a/blogger/templates/auth/register.html
+++ b/blogger/templates/auth/register.html
@@ -1,12 +1,5 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
 {% block body %}
-all users
-
-{% for result in users %}
-<ul>
-    <li>{{ result.name }}</li>
-</ul>
-{% endfor %}
-
+REGISTER PAGE
 {% endblock %}
