--- a/blogger/templates/auth/login.html
+++ b/blogger/templates/auth/login.html
@@ -2,4 +2,13 @@
 
 {% block body %}
 LOGIN PAGE
+
+<form action="/auth/login", method="POST">
+    name
+    <input type="text" name="name">
+    password:
+    <input type="text" name="password">
+    <input type="submit" value="Submit">
+</form>
+
 {% endblock %}
